# PyMouseBot

./: .gitignore  README.md  mouseBot.py  moveMouse.py  requirements.txt  setup.cfg  setup.py
src/: macMouse.py  winMouse.py
