[metadata]
name = pymousebot
version = 1.0.0
author = Oaker Min
author_email = ominbruce@outlook.com
description = A bot to simulate mouse movements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brootware/PyMouseBot.git
project_urls =
Bug Tracker = https://github.com/brootware/PyMouseBot/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU License
Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
